fixed the search icon responsiveness issue on mobile"

--- a/src/components/SearchPopSmall/searchPopSmall.css
+++ b/src/components/SearchPopSmall/searchPopSmall.css
@@ -1,6 +1,7 @@
 .searchsmall-container{
     background-color: #eee;
     min-height: 100vh;
+    width: 100%;
 }
 
 @media (min-width: 750px){
@@ -10,7 +11,7 @@
 }
 }
 .searchsmall-wrapper{
-    width: 90%;
+    width: 90vw;
     margin:5vh auto;
    
 }
@@ -25,7 +26,7 @@
     display: flex;
     list-style: none;
     justify-content: space-around;
-    width: 40vw;
+    width: 60%;
 }
 
 .searchsmall-header{
